fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,12 @@ a {
 }
 
 main {
+  position: relative;
   max-width: var(--max-width);
   width: 97%;
   margin: 0 auto;
   padding: 4em 0 2em; 
+  overflow-x: hidden;
 }
 
 img {
